--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -23,6 +23,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@tsconfig/node20": "^20.1.6",
     "@tsconfig/node22": "^22.0.1",
     "@types/jsdom": "^21.1.7",
     "@types/leaflet": "^1.9.20",
@@ -42,7 +43,7 @@
     "postcss": "^8.5.3",
     "prettier": "3.5.3",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.9.2",
+    "typescript": "^5.4.5",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.1.1",
