--- a/app/frontend/tsconfig.vitest.json
+++ b/app/frontend/tsconfig.vitest.json
@@ -1,11 +1,18 @@
 {
   "extends": "./tsconfig.app.json",
-  "include": ["src/**/__tests__/*", "env.d.ts"],
-  "exclude": [],
   "compilerOptions": {
+    "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
-
-    "lib": [],
-    "types": ["node", "jsdom"]
-  }
+    "types": ["vitest/globals", "vite/client", "jsdom"],
+    "lib": ["es2023"]
+  },
+  "include": [
+    "vitest.config.ts",
+    "vite.config.ts",      // ★ これが無いと TS6307 になります
+    "tests/**/*",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue"
+  ],
+  "exclude": ["node_modules", "dist"]
 }
